--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title: 如果一切重来
 #副标题
 subtitle: 小小程序员的成长之路
 description: 两耳不闻窗外事
-author: Yb Xiao
+author: Blithe Shaw
 #语言
 language: zh-Hans 
 timezone:
