--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -97,7 +97,7 @@ font:
   global:
     # external: true will load this font family from host.
     external: true
-    family: Monda
+    family: Lato
     #family: Lato
 
   # Font settings for Headlines (h1, h2, h3, h4, h5, h6)
