增加域名设置和网易跟帖

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -306,7 +306,7 @@ mathjax:
 baidu_analytics: 4b8e932f7f9d6960a63982f386fcfa70
 
 # Duoshuo ShortName
-duoshuo_shortname: xiaoyb
+#duoshuo_shortname: xiaoyb
 
 # Disqus
 #disqus_shortname:
@@ -315,7 +315,7 @@ duoshuo_shortname: xiaoyb
 #hypercomments_id:
 
 # Gentie productKey
-#gentie_productKey:
+gentie_productKey:e761aa7691cd46b5b71aa995986b26b4
 
 # Support for youyan comments system.
 # You can get your uid from http://www.uyan.cc
@@ -338,7 +338,7 @@ duoshuo_shortname: xiaoyb
 #add_this_id:
 
 # Share
-duoshuo_share: true
+#duoshuo_share: true
 
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters/
@@ -362,8 +362,8 @@ duoshuo_share: true
 # user_id must NOT be null when admin_enable is true!
 # you can visit http://dev.duoshuo.com get duoshuo user id.
 duoshuo_info:
-  ua_enable: true
-  admin_enable: true
+  ua_enable: flase
+  admin_enable: false
   user_id: 0
   #admin_nickname: Author
 
