--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -97,8 +97,8 @@ font:
   global:
     # external: true will load this font family from host.
     external: true
-    family: Lato
     #family: Lato
+    family: Monda
 
   # Font settings for Headlines (h1, h2, h3, h4, h5, h6)
   # Fallback to `global` font settings.
@@ -285,7 +285,7 @@ custom_logo:
 # Available value:
 #    normal | night | night eighties | night blue | night bright
 # https://github.com/chriskempson/tomorrow-theme
-highlight_theme: night
+highlight_theme: normal
 
 
 # ---------------------------------------------------------------
