--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -284,8 +284,7 @@ custom_logo:
 # Available value:
 #    normal | night | night eighties | night blue | night bright
 # https://github.com/chriskempson/tomorrow-theme
-highlight_theme: night bright
-
+highlight_theme: night eighties
 
 # ---------------------------------------------------------------
 # Third Party Services Settings
@@ -481,7 +480,7 @@ use_motion: true
 fancybox: true
 
 # Canvas-nest
-canvas_nest: false
+canvas_nest: true
 
 # Script Vendors.
 # Set a CDN address for the vendor you want to customize.
